--- a/src/controller/menu/dashboard.fxml
+++ b/src/controller/menu/dashboard.fxml
@@ -185,11 +185,6 @@
                                                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                          </padding>
                                                       </CheckBox>
-                                                      <CheckBox fx:id="chkMedia" mnemonicParsing="false" text="Media">
-                                                         <padding>
-                                                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                                         </padding>
-                                                      </CheckBox>
                                                       <CheckBox fx:id="chkMediaAritmetica" mnemonicParsing="false" text="Media Aritmética">
                                                          <padding>
                                                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -235,12 +230,27 @@
                                                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                          </padding>
                                                       </CheckBox>
-                                                      <CheckBox fx:id="chkProbabilidade" mnemonicParsing="false" text="Probabilidade">
+                                                      <CheckBox fx:id="chkProduto" mnemonicParsing="false" text="Produto">
                                                          <padding>
                                                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                          </padding>
                                                       </CheckBox>
-                                                      <CheckBox fx:id="chkFatorial" mnemonicParsing="false" text="Fatorial">
+                                                      <CheckBox fx:id="chkQuadradoSoma" mnemonicParsing="false" text="Quadrado da Soma">
+                                                         <padding>
+                                                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                                         </padding>
+                                                      </CheckBox>
+                                                      <CheckBox fx:id="chkSomaProdutos" mnemonicParsing="false" text="Soma dos Produtos">
+                                                         <padding>
+                                                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                                         </padding>
+                                                      </CheckBox>
+                                                      <CheckBox fx:id="chkSomaQuadrados" mnemonicParsing="false" text="Soma de Quadrados">
+                                                         <padding>
+                                                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                                         </padding>
+                                                      </CheckBox>
+                                                      <CheckBox fx:id="chkProdutoSoma" mnemonicParsing="false" text="Produto da Soma">
                                                          <padding>
                                                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                          </padding>
