--- a/src/controller/menu/dashboard.fxml
+++ b/src/controller/menu/dashboard.fxml
@@ -106,7 +106,7 @@
                         </HBox>
                         <HBox prefHeight="37.0" prefWidth="300.0">
                            <children>
-                              <TextField fx:id="txtAmostra" onAction="#txtAreaAmostra" prefHeight="31.0" prefWidth="310.0" />
+                              <TextField fx:id="txtAmostra" prefHeight="31.0" prefWidth="310.0" />
                            </children>
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -132,7 +132,7 @@
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </padding>
                            <children>
-                              <TextField fx:id="txtPeso" onAction="#txtAreaAmostra" prefHeight="31.0" prefWidth="299.0" />
+                              <TextField fx:id="txtPeso" prefHeight="31.0" prefWidth="299.0" />
                            </children>
                         </HBox>
                         <HBox prefHeight="57.0" prefWidth="300.0">
@@ -180,7 +180,7 @@
                                              <content>
                                                 <VBox maxWidth="300.0" minWidth="300.0" prefWidth="300.0">
                                                    <children>
-                                                      <CheckBox fx:id="chkTudoDescritiva" mnemonicParsing="false" text="Tudo">
+                                                      <CheckBox fx:id="chkTudoDescritiva" mnemonicParsing="false" onAction="#gerenciaCheckBox" text="Tudo">
                                                          <padding>
                                                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                          </padding>
