--- a/src/controller/menu/dashboard.fxml
+++ b/src/controller/menu/dashboard.fxml
@@ -190,11 +190,11 @@
                                                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                          </padding>
                                                       </CheckBox>
-                                                      <CheckBox fx:id="chkMediaAritmeticaPonderada" mnemonicParsing="false" text="Media Aritmética Ponderada">
-                                                         <padding>
-                                                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                                         </padding>
-                                                      </CheckBox>
+<!--                                                       <CheckBox fx:id="chkMediaAritmeticaPonderada" mnemonicParsing="false" text="Media Aritmética Ponderada"> -->
+<!--                                                          <padding> -->
+<!--                                                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /> -->
+<!--                                                          </padding> -->
+<!--                                                       </CheckBox> -->
                                                       <CheckBox fx:id="chkMediaHarm" mnemonicParsing="false" text="Media Harmônica">
                                                          <padding>
                                                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
